--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import Logo from "./icons/logo.png";
     <img w-18 src={Logo} />
     <span
       class="text-2xl mr-auto text-transparent font-extrabold bg-clip-text bg-gradient-to-r from-sky-400 to-emerald-600"
-      >Q&A</span
+      >iChat-x</span
     >
     <Recomment />
   </div>
